--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less-middleware": "~2.2.0",
     "lodash": "^4.17.4",
     "morgan": "~1.8.1",
+    "parsleyjs": "^2.7.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
